<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_home"
        android:title="@string/title_menu_home"
        android:icon="@drawable/ic_menu_home"
        android:orderInCategory="1" />

    <item android:id="@+id/menu_search"
        android:title="@string/title_menu_search"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="2" />

    <item android:id="@+id/menu_favorite"
        android:title="@string/title_menu_favorite"
        android:icon="@drawable/ic_menu_favorite"
        android:orderInCategory="3" />

    <item android:id="@+id/menu_download"
        android:title="@string/title_menu_download"
        android:icon="@drawable/ic_menu_download"
        android:orderInCategory="4" />

    <item android:id="@+id/menu_profile"
        android:title="@string/title_menu_profile"
        android:icon="@drawable/ic_menu_profile"
        android:orderInCategory="5" />


</menu>